@@ -565,21 +565,41 @@
                   "stopwords" : [
                      "Blanco",
                      "CPAN",
+                     "SOQL",
+                     "SOSL",
                      "Salesforce",
                      "Shimizu",
                      "Stubblebine",
+                     "checkAsyncStatus",
+                     "checkRetrieveStatus",
                      "complexTypes",
+                     "convertLead",
                      "describeGlobal",
+                     "describeLayout",
+                     "describeMetadata",
                      "describeSObject",
+                     "describeSObjects",
+                     "describeTabs",
                      "dreamForce",
+                     "getDeleted",
+                     "getErrorDetails",
+                     "getServerTimestamp",
+                     "getUpdated",
+                     "getUserInfo",
                      "github",
                      "gmail",
                      "majordojo",
+                     "queryAll",
                      "queryLocator",
+                     "queryMore",
                      "redhotpenguin",
+                     "resetPassword",
+                     "retrieveMetadata",
                      "salesforce",
                      "searchString",
                      "serverUrl",
+                     "setPassword",
+                     "upsert",
                      "userId"
                   ],
                   "wordlist" : "Pod::Wordlist"
