@@ -50,6 +50,7 @@ user    = p5-salesforce
 [Test::Kwalitee]
 [Test::Version]
 [Test::Pod::Coverage::Configurable]
+trustme = WWW::Salesforce => qr/^(?:get_clientM?|get_session_headerM?|get_username)$/
 skip = WWW::Salesforce::Constants
 skip = WWW::Salesforce::Deserializer
 skip = WWW::Salesforce::Serializer
@@ -68,6 +69,8 @@ stopword = Stubblebine
 stopword = complexTypes
 stopword = describeGlobal
 stopword = describeSObject
+stopword = describeSObjects
+stopword = describeTabs
 stopword = dreamForce
 stopword = userId
 stopword = queryLocator
@@ -75,7 +78,24 @@ stopword = majordojo
 stopword = searchString
 stopword = serverUrl
 stopword = salesforce
-
+stopword = convertLead
+stopword = describeLayout
+stopword = getDeleted
+stopword = getServerTimestamp
+stopword = getUpdated
+stopword = getUserInfo
+stopword = queryAll
+stopword = queryMore
+stopword = SOQL
+stopword = SOSL
+stopword = resetPassword
+stopword = setPassword
+stopword = upsert
+stopword = checkAsyncStatus
+stopword = checkRetrieveStatus
+stopword = describeMetadata
+stopword = getErrorDetails
+stopword = retrieveMetadata
 
 [CopyFilesFromBuild]
 copy = Makefile.PL
